refactor: add createdAt field in lesson entity